--- a/assignment_page.html
+++ b/assignment_page.html
@@ -352,7 +352,7 @@ footer p{
 <hr>
 <footer class="down">
 <p><b>Author:Sourav V</b></p>
-<a href="mailto:souravsep282005@gmail.com" style="color: #000;">Contact me here</a>
+<a href="mailto:example@gmail.com" style="color: #000;">Contact me here</a>
 </footer>
 </main>
 </body>
